name:                hgis
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vmchale/hgis#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          tmchale@wisc.edu
copyright:           Copyright: (c) 2016 Vanessa McHale
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Flag cairo {
  Description: Enable cairo backend for png maps
  Default:     False
}

library
  hs-source-dirs:      src
  if flag(cairo) {
    exposed-modules:   GIS.Exe.Opt
                     , GIS.Exe.OptCairo
                     , GIS.Math.Spherical
                     , GIS.Graphics.PlotPNG
                     , GIS.Graphics.PlotSVG
  }
  else {
    exposed-modules:   GIS.Exe.Opt
                     , GIS.Math.Spherical
                     , GIS.Graphics.PlotSVG
  }
  other-modules:       GIS.Hylo
                     , GIS.Math.Projections
                     , GIS.Math.Utils
                     , GIS.Utils
                     , GIS.Graphics.Plot
                     , GIS.Graphics.Types
                     , GIS.Types
  if flag(cairo) {
    build-depends:   base >= 4.7 && < 5
                     , readshp
                     , optparse-generic
                     , Chart
                     , Chart-cairo
                     , Chart-diagrams
                     , lens
                     , ansi-wl-pprint
                     , composition
                     , composition-extra
                     , transformers
                     , directory
                     , colour
                     , data-default
  }
  else {
    build-depends:     base >= 4.7 && < 5
                     , readshp
                     , optparse-generic
                     , Chart
                     , Chart-diagrams
                     , lens
                     , ansi-wl-pprint
                     , composition
                     , composition-extra
                     , transformers
                     , directory
                     , colour
                     , data-default
  }
  if flag(cairo)
    pkgconfig-depends: cairo
  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                     , OverloadedStrings

executable hgis
  hs-source-dirs:      app
  if flag(cairo)
    main-is:           MainPng.hs
  else
    main-is:           Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hgis
  default-language:    Haskell2010

test-suite hgis-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hgis
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vmchale/hgis
